Fix submenu alignment and hover text color

--- a/css/theme.css
+++ b/css/theme.css
@@ -480,12 +480,13 @@ button.start-menu-item {
   display: none;
   position: absolute;
   left: 100%;
-  bottom: -2px;
+  top: 0;
   min-width: 180px;
 }
 
 .start-menu-item.has-submenu:hover > .start-submenu { display: block; }
 .start-submenu .start-menu-item { color: #000; }
+.start-submenu .start-menu-item:hover { color: var(--highlight-text); }
 
 /* Empty submenu placeholder */
 .start-menu-empty {
